# build_qt_with_cmake

./: CMakeLists.txt  CmakeLists.txt  README.md
forms/: mainwindow.ui
src/: main.cpp
